[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/tanked_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://tilemap/tilemap.tres" type="TileSet" id=3]
[ext_resource path="res://themes/fonts/title-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://art/logo.png" type="Texture" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_next = NodePath("VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/StartGameButton")
focus_previous = NodePath("VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/QuitGameButton")
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1073741833, 0, 1, 1073741828, 0, 2, 1073741828, 0, 3, 1073741828, 0, 4, 1073741828, 0, 5, 1073741828, 0, 6, 1073741828, 0, 7, 1073741828, 0, 8, 1073741828, 0, 9, 1073741828, 0, 10, 1073741828, 0, 11, 1073741828, 0, 12, 1073741828, 0, 13, 1073741828, 0, 14, 1073741828, 0, 15, 1073741828, 0, 16, 1073741828, 0, 17, 1073741828, 0, 18, 1073741828, 0, 19, 1073741828, 0, 20, 1073741828, 0, 21, 1073741828, 0, 22, 1073741828, 0, 23, 1073741832, 0, 65536, 2, 0, 65559, 5, 0, 131072, 2, 0, 131095, 5, 0, 196608, 2, 0, 196631, 5, 0, 262144, 2, 0, 262167, 5, 0, 327680, 2, 0, 327703, 5, 0, 393216, 2, 0, 393239, 5, 0, 458752, 2, 0, 458775, 5, 0, 524288, 2, 0, 524311, 5, 0, 589824, 2, 0, 589847, 5, 0, 655360, 2, 0, 655383, 5, 0, 720896, 2, 0, 720919, 5, 0, 786432, 2, 0, 786455, 5, 0, 851968, 9, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 8, 0 )

[node name="TileMap" type="TileMap" parent="TileMap"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 398.0
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 164.0
margin_top = 33.0
margin_right = 604.0
margin_bottom = 365.0

[node name="VBoxContainer_Title" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer3"]
editor/display_folded = true
margin_right = 440.0
margin_bottom = 112.0

[node name="TitleLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Title"]
margin_right = 440.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.45098, 0.509804, 0.360784, 1 )
custom_colors/font_color_shadow = Color( 0.266667, 0.266667, 0.160784, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "TANKED"
align = 1

[node name="VBoxContainer_Buttons" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer3"]
margin_left = 120.0
margin_top = 116.0
margin_right = 320.0
margin_bottom = 332.0
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CampaignButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons"]
margin_right = 200.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../QuitGameButton")
focus_neighbour_top = NodePath("../QuitGameButton")
focus_neighbour_right = NodePath("../QuickMatchButton")
focus_neighbour_bottom = NodePath("../QuickMatchButton")
focus_next = NodePath("../QuickMatchButton")
focus_previous = NodePath("../QuitGameButton")
focus_mode = 1
action_mode = 0
text = "CAMPAIGN"

[node name="QuickMatchButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
focus_neighbour_left = NodePath("../CampaignButton")
focus_neighbour_top = NodePath("../CampaignButton")
focus_neighbour_right = NodePath("../MultiPlayerButton")
focus_neighbour_bottom = NodePath("../MultiPlayerButton")
focus_next = NodePath("../MultiPlayerButton")
focus_previous = NodePath("../CampaignButton")
shortcut_in_tooltip = false
action_mode = 0
text = "QUICK MATCH"

[node name="MultiPlayerButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 128.0
focus_neighbour_left = NodePath("../QuickMatchButton")
focus_neighbour_top = NodePath("../QuickMatchButton")
focus_neighbour_right = NodePath("../QuitGameButton")
focus_neighbour_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../QuickMatchButton")
shortcut_in_tooltip = false
action_mode = 0
text = "MULTIPLAYER"

[node name="BlankButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 172.0
focus_neighbour_top = NodePath("../StartGameButton")
focus_neighbour_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
focus_mode = 1
toggle_mode = true
enabled_focus_mode = 1
flat = true

[node name="QuitGameButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons"]
margin_top = 176.0
margin_right = 200.0
margin_bottom = 216.0
focus_neighbour_left = NodePath("../MultiPlayerButton")
focus_neighbour_top = NodePath("../MultiPlayerButton")
focus_neighbour_right = NodePath("../CampaignButton")
focus_neighbour_bottom = NodePath("../CampaignButton")
focus_next = NodePath("../CampaignButton")
focus_previous = NodePath("../MultiPlayerButton")
focus_mode = 1
toggle_mode = true
enabled_focus_mode = 1
text = "QUIT GAME"

[node name="CreatedByTexture" type="TextureRect" parent="VBoxContainer"]
margin_top = 402.0
margin_right = 768.0
margin_bottom = 432.0
texture = ExtResource( 5 )
stretch_mode = 6
[connection signal="focus_entered" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/CampaignButton" to="." method="_on_CampaignButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/CampaignButton" to="." method="_on_CampaignButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/QuickMatchButton" to="." method="_on_QuickMatchButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/QuickMatchButton" to="." method="_on_QuickMatchButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/MultiPlayerButton" to="." method="_on_MultiPlayerButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/QuitGameButton" to="." method="_on_QuitGameButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer3/VBoxContainer_Buttons/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
